# WEngine

./: Cargo.toml  cargo.toml
Game/: Cargo.toml
Game/src/: main.rs
WEngine/: Cargo.toml
WEngine/src/: entity.rs  lib.rs  model.rs  physics.rs  texture.rs
src/: lib.rs  main.rs  resources.rs  shader.wgsl
